--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <center><table border="1" width="1000">
 <tr>	
-<td><center><img src= "45.PNG"></center><br>
+<td><center><img src= "45.png"></center><br>
 <img src="banner.GIF" width="1200">
 <center><style type="text/css"></td>
 
@@ -34,15 +34,15 @@ float:left;}.nav li a {background-color:#FDFDFD;color:black;text-decoration:none
 </head>
 <body>
 <div id="header"><ul class="nav">
-<li><a href=""><img src="r.GIF" width="30" heiht="20">PRIMER PARCIAL</a></img>
+<li><a href=""><img src="r.gif" width="30" heiht="20">PRIMER PARCIAL</a></img>
 <ul>
-<li><a href=""><a href="P2.html"><img src="01.GIF" width="30" heiht="20">Horario de clases </a></li></a></img>
-<li><a href=""><a href="suma.html"><img src="02.GIF" width="30" heiht="20">Suma de dos numeros </a></li></img>
-<li><a href=""><a href="TERRENO.html"><img src="03.GIF" width="30" heiht="20">El terreno de luis</a></li></img>
-<li><a href=""><a href="marquesina.html"><img src="04.GIF" width="30" heiht="20">Marquesinas</a></img>
+<li><a href=""><a href="P2.html"><img src="01.gif" width="30" heiht="20">Horario de clases </a></li></a></img>
+<li><a href=""><a href="suma.html"><img src="02.gif" width="30" heiht="20">Suma de dos numeros </a></li></img>
+<li><a href=""><a href="TERRENO.html"><img src="03.gif" width="30" heiht="20">El terreno de luis</a></li></img>
+<li><a href=""><a href="marquesina.html"><img src="04.gif" width="30" heiht="20">Marquesinas</a></img>
 </ul>
 </li>
-<li><a href=""><img src="06.GIF" width="30" heiht="20">SEGUNDO PARCIAL </a></img><ul>
+<li><a href=""><img src="06.gif" width="30" heiht="20">SEGUNDO PARCIAL </a></img><ul>
 <li><a href=""><a href="Caratula.html">Caratula en HTML </a></li></a></img>
 <li><a href=""><a href="Salarios.html">Sueldos y Salarios </a></li></img>
 <li><a href=""><a href="raiz cuadrada.html">Raiz cuadrada</a></li></img>
@@ -84,7 +84,7 @@ float:left;}.nav li a {background-color:#FDFDFD;color:black;text-decoration:none
 </center>
  <br>
 <br>
-<center><img src="9.PNG" width="1130" height="80"></center>
+<center><img src="9.png" width="1130" height="80"></center>
 <center><font size="0">Todos los derechos reservados,Elaboradopor:Arturo Piña Miranda,Tel:7121858378,apina9836@gmail.com,Paginaweb:www.caratula.gob.mx se recomienda usargoogle</font size></center></p></td>
 
 </td>
