--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <center><table border="1" width="1000">
 <tr>	
 <td><center><img src= "45.png"></center><br>
-<img src="banner.GIF" width="1200">
+<img src="banner.gif" width="1200">
 <center><style type="text/css"></td>
 
 
@@ -51,7 +51,7 @@ float:left;}.nav li a {background-color:#FDFDFD;color:black;text-decoration:none
 <li><a href=""><a href="Punteros.html">Tipos de puntero</a></img>
 </ul>
 </li>
-<font size="2"><li><a href=""><img src="05.GIF" width="30" heiht="20">CECYTEM</a></img>
+<font size="2"><li><a href=""><img src="05.gif" width="30" heiht="20">CECYTEM</a></img>
 <ul>
 <li><a href=""><a href="cecytem.html">¿Que es?</a></li>
 <li><a href=""><a href="mision.html">Mision</a></li>
@@ -69,13 +69,13 @@ float:left;}.nav li a {background-color:#FDFDFD;color:black;text-decoration:none
 </ul>
 </li>
 </li>
-<font size="2"><li><a href=""><img src="08.GIF" width="30" heiht="20">HABITOS</a></img>
+<font size="2"><li><a href=""><img src="08.gif" width="30" heiht="20">HABITOS</a></img>
 <ul>
 <li><a href="">Habitos saludables dia 1</a></li>
 <li><a href="">Habitos saludables dia 2</a></li>
 <li><a href="">Alimentacion nutritiva </a></li></font>
 
-<font size="2"><li><a href=""><img src="09.GIF" width="35" heiht="40">PLANEA</a></img>
+<font size="2"><li><a href=""><img src="09.gif" width="35" heiht="40">PLANEA</a></img>
 <ul>
 <li><a href=""><a href="lectura.html">Página web lectura </a></li>
 <li><a href=""><a href="matematicas.html">Página web matematicas  </a></li></font>
