--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ float:left;}.nav li a {background-color:#FDFDFD;color:black;text-decoration:none
 <li><a href=""><a href="infraestructura.html">infraestructura</a></li></font>
 </ul>
 </li>
-<font size="2"><li><a href=""><img src="07.GIF" width="30" heiht="20">ADICCIONES </a></img>
+<font size="2"><li><a href=""><img src="07.gif" width="30" heiht="20">ADICCIONES </a></img>
 <ul>
 <li><a href=""><a href="FENTANILO.html">Pagina web fentanilo</a></li>
 <li><a href=""><a href="alimentacion.html">Pagina web metanfetaminas</a></li></font>
