--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@ float:left;}.nav li a {background-color:#FDFDFD;color:black;text-decoration:none
 <li><a href="">Habitos saludables dia 2</a></li>
 <li><a href="">Alimentacion nutritiva </a></li></font>
 
-<font size="2"><li><a href=""><img src="09.gif" width="35" heiht="40">PLANEA</a></img>
+<font size="2"><li><a href=""><img src="09.png" width="35" heiht="40">PLANEA</a></img>
 <ul>
-<li><a href=""><a href="lectura.html">Página web lectura </a></li>
-<li><a href=""><a href="matematicas.html">Página web matematicas  </a></li></font>
+<li><a href=""><a href="https://chrisant23.github.io/mate-arturo/">Página web lectura </a></li>
+<li><a href=""><a href=" https://chrisant23.github.io/espa-arturo/">Página web matematicas  </a></li></font>
 </ul>
 </div>
 </center>
