--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ float:left;}.nav li a {background-color:#FDFDFD;color:black;text-decoration:none
 <div id="header"><ul class="nav">
 <li><a href=""><img src="r.gif" width="30" heiht="20">PRIMER PARCIAL</a></img>
 <ul>
-<li><a href=""><a href="P2.html"><img src="01.gif" width="30" heiht="20">Horario de clases </a></li></a></img>
-<li><a href=""><a href="suma.html"><img src="02.gif" width="30" heiht="20">Suma de dos numeros </a></li></img>
-<li><a href=""><a href="TERRENO.html"><img src="03.gif" width="30" heiht="20">El terreno de luis</a></li></img>
-<li><a href=""><a href="marquesina.html"><img src="04.gif" width="30" heiht="20">Marquesinas</a></img>
+<li><a href=""><a href="P2.html">Horario de clases </a></li></a></img>
+<li><a href=""><a href="suma.html">Suma de dos numeros </a></li></img>
+<li><a href=""><a href="TERRENO.html">El terreno de luis</a></li></img>
+<li><a href=""><a href="marquesina.html">Marquesinas</a></img>
 </ul>
 </li>
 <li><a href=""><img src="06.gif" width="30" heiht="20">SEGUNDO PARCIAL </a></img><ul>
@@ -75,10 +75,10 @@ float:left;}.nav li a {background-color:#FDFDFD;color:black;text-decoration:none
 <li><a href="">Habitos saludables dia 2</a></li>
 <li><a href="">Alimentacion nutritiva </a></li></font>
 
-<font size="2"><li><a href=""><img src="09.png" width="35" heiht="40">PLANEA</a></img>
+<font size="2"><li><a href="">PLANEA</a></img>
 <ul>
-<li><a href=""><a href="https://chrisant23.github.io/mate-arturo/">Página web lectura </a></li>
-<li><a href=""><a href=" https://chrisant23.github.io/espa-arturo/">Página web matematicas  </a></li></font>
+<li><a href=""><a href="https://chrisant23.github.io/mate-arturo/">Página web Matemáticas  </a></li>
+<li><a href=""><a href=" https://chrisant23.github.io/espa-arturo/">Página web Lectura </a></li></font>
 </ul>
 </div>
 </center>
